--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body class="flex flex-col items-center justify-evenly min-h-screen bg-blue-100">
   <!-- Hero Website -->
   <header>
-    <h1 class="text-3xl font-bold">Todo List</h1>
+    <h1 class="text-3xl font-bold">To Do List</h1>
   </header>
 
   <main class="py-[16px] rounded">
@@ -32,8 +32,8 @@
     <!-- Todo Action -->
     <section class="flex justify-between p-[8px]">
       <div class="flex gap-[8px]">
-        <button class="bg-gray-200 p-[4px] rounded" onclick="setFilter('completed')">Show Completed</button>
-        <button class="bg-green-200 p-[4px] rounded" onclick="setFilter('all')">Show All</button>
+        <button class="bg-green-200 p-[4px] rounded" onclick="setFilter('completed')">Show Completed</button>
+        <button class="bg-gray-200 p-[4px] rounded" onclick="setFilter('all')">Show All</button>
         <button class="bg-yellow-200 p-[4px] rounded" onclick="setFilter('pending')">Show Pending</button>
       </div>
 
@@ -48,7 +48,7 @@
 
       <!-- Task List -->
       <div id="task-list">
-        <p>Task is Empty!</p>
+        <p>No Task Added!</p>
       </div>
     </section>
   </main>
